--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
 		niech idzie tam gdzie chce,<br>
 		hej, głupia ty, głupia ty, głupia ty.</p>
 
+		<p>Małgośka – mówią mi – <br>
+		on niewart jednej łzy, <br>
+		on nie jest wart jednej łzy.<br>
+		Małgośka – kochaj nas – <br>
+		na smutki przyjdzie czas,<br>
+		zaśpiewaj raz, zatańcz raz!<br>
+		Małgośka – tańcz i pij,<br>
+		a z niego sobie kpij,<br>
+		a z niego kpij sobie, kpij. <br>
+		Jak wróci, powiedz: nie,<br>
+		niech idzie tam gdzie chce,<br>
+		hej, głupia ty, głupia ty, głupia ty.</p>
+
 		
 	</div>
 
